fix(print): print-friendly viewer now has an intro pragraph explaining its experimental/unfinished nature. Also fixed the alignment of the viewer with the main heading.

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1572,6 +1572,7 @@ $render-sic: false;
 .viewer-print {
   #text-viewer {
     .panel-wrapper {
+      justify-content: left;
       .panel-nav {
         input[type="number"] {
           width: 5rem;
